--- a/Style/Style.css
+++ b/Style/Style.css
@@ -52,4 +52,286 @@ a {
   .header__goback {
     font-size: 32px;
   }
+}
+
+.info__location {
+  display: flex;
+  height: 50px;
+  justify-content: center;
+  align-items: center;
+  background-color: #ebebeb;
+  box-shadow: inset 0 10px 8px -5px #d5d5d5;
+  gap: 17px;
+}
+
+.info__icon {
+  display: flex;
+  align-items: center;
+}
+
+.info__form {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 109px;
+}
+.info__form .info__city {
+  border: transparent;
+  background-color: #EAEAEA;
+}
+.info__form .placeholder {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #353535;
+  pointer-events: none;
+}
+.info__form .info__city:focus + .placeholder {
+  display: none;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  padding: 20px 0;
+  background-color: whitesmoke;
+  text-align: center;
+}
+.hero__title {
+  width: 70%;
+  margin: 10px 0;
+  font-size: 24px;
+  line-height: 1;
+  font-weight: 700;
+}
+.hero p {
+  width: 85%;
+  margin: 0;
+  font-size: 18px;
+  font-weight: 300;
+}
+
+.functioning {
+  width: 90%;
+  margin: auto;
+  padding: 50px 0;
+}
+.functioning__title {
+  margin: 10px 0;
+  font-size: 24px;
+  line-height: 1;
+  font-weight: 700;
+}
+.functioning__list {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 95%;
+  padding-bottom: 10px;
+  margin: auto;
+}
+@media all and (min-width: 1024px) {
+  .functioning__list {
+    width: 98%;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+.functioning__step {
+  display: flex;
+  align-items: center;
+  height: 72px;
+  margin: 15px 0;
+  border-radius: 20px;
+  border: none;
+  gap: 4%;
+  background-color: #f6f6f6;
+  box-shadow: 0 4px 10px 0 #d5d5d5;
+}
+@media all and (min-width: 1024px) {
+  .functioning__step {
+    width: 30%;
+  }
+}
+.functioning__step:hover {
+  background-color: #f2eafb;
+  box-shadow: 0 4px 10px 0 #bcbcbc;
+}
+.functioning__step:hover > .functioning__step--icon {
+  color: #9356DC;
+}
+.functioning__step--number {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  position: relative;
+  left: -19px;
+  bottom: -5px;
+  height: 24px;
+  width: 24px;
+  border-radius: 50%;
+  color: #ffffff;
+  background-color: #9356DC;
+  padding: 1%;
+}
+.functioning__step--icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20px;
+  height: 25px;
+  color: #7E7E7E;
+}
+.functioning__step--subtitle {
+  width: 211px;
+  height: 15px;
+  font-weight: 600;
+}
+
+.restaurant {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  padding: 20px 0 66px 0;
+  background-color: #F6F6F6;
+}
+.restaurant__title {
+  width: 90%;
+  margin: 20px auto;
+  font-size: 24px;
+  line-height: 1;
+  font-weight: 700;
+}
+.restaurant__bloc {
+  width: 90%;
+  margin: auto;
+}
+@media all and (min-width: 768px) {
+  .restaurant__bloc {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
+
+.restaurant__cards {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  height: 251px;
+  margin: auto;
+  margin-bottom: 18px;
+  border-radius: 15px;
+  background-color: #ffffff;
+  box-shadow: 0 4px 10px 0 #d5d5d5;
+}
+@media all and (min-width: 768px) {
+  .restaurant__cards {
+    width: 48%;
+    margin: 0;
+    margin-bottom: 4%;
+  }
+}
+.restaurant__cards:hover {
+  box-shadow: 0 4px 10px 0 #bcbcbc;
+}
+.restaurant__cards--img {
+  position: relative;
+  overflow: hidden;
+  height: 175px;
+  border-radius: 15px 15px 0px 0px;
+}
+.restaurant__cards--img img {
+  width: 100%;
+  height: 175px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.restaurant__cards--img--markerinfo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  right: 15px;
+  top: 12px;
+  width: 80px;
+  height: 30px;
+  border-radius: 2px;
+  background-color: #99E2D0;
+  color: #278870;
+  font-weight: 500;
+}
+.restaurant__cards--info {
+  display: flex;
+  align-items: flex-start;
+  height: auto;
+  min-height: 75px;
+  padding: 15px;
+}
+.restaurant__cards--info--text {
+  width: 90%;
+}
+.restaurant__cards--info h4, .restaurant__cards--info p {
+  margin: 0;
+}
+.restaurant__cards--info h4 {
+  width: 267px;
+  height: 20px;
+  margin-bottom: 5px;
+  font-size: 18px;
+}
+.restaurant__cards--info p {
+  height: 24px;
+  font-weight: 300;
+  font-size: 17px;
+}
+.restaurant__cards--like {
+  position: absolute;
+  top: 76%;
+  right: 7%;
+  font-size: 25px;
+}
+
+.loader {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  background-color: rgba(255, 255, 255, 0.9);
+  animation: loader 0.01s;
+  animation-delay: 1.75s;
+  animation-fill-mode: both;
+  z-index: 10000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.loader__item {
+  height: 1rem;
+  width: 1rem;
+  border-radius: 1rem;
+  animation: jump 1s;
+  animation-iteration-count: 1;
+}
+.loader__itemContainer {
+  display: flex;
+  width: 5rem;
+  justify-content: space-between;
+}
+.loader__item--1 {
+  background-color: #9356DC;
+}
+.loader__item--2 {
+  background-color: #FF79DA;
+  animation-delay: 0.25s;
+}
+.loader__item--3 {
+  background-color: #99E2D0;
+  animation-delay: 0.5s;
 }/*# sourceMappingURL=Style.css.map */
