--- a/Style/Style.css
+++ b/Style/Style.css
@@ -24,6 +24,67 @@ a {
 
 /**** Taille police ****/
 /**** Titre d'en tête ****/
+/* Boutons */
+.hero__btngradient {
+  width: 218px;
+  height: 50px;
+  color: #ffffff;
+  font-size: 16px;
+  background: linear-gradient(357deg, #9356DC, #FF79DA);
+  border-radius: 25px;
+  border: none;
+  font-weight: 500;
+  box-shadow: 0 4px 10px 0 #d5d5d5;
+  cursor: pointer;
+  margin: 27px 75px 57px 82px;
+  transition: opacity 300ms ease-in-out;
+}
+.hero__btngradient:hover {
+  opacity: 0.88;
+  box-shadow: 0 4px 10px 0 #afafaf;
+}
+.hero__btngradient--long {
+  width: 50%;
+  min-width: 150px;
+  max-width: 250px;
+}
+
+.button__like {
+  width: 28px;
+  z-index: 0;
+  position: relative;
+  font-family: "Font Awesome 5 Free";
+  font-size: 25px;
+  padding: 0;
+  border: transparent 0px solid;
+  background-color: transparent;
+  -webkit-text-stroke: 1px white;
+  cursor: pointer;
+}
+.button__like:hover::after {
+  z-index: 1;
+  animation: heart-fill 900ms forwards cubic-bezier(0.65, 1.01, 0.98, 1.06);
+}
+.button__like::after {
+  z-index: -1;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  font-size: 25px;
+  content: "\f004";
+  color: transparent;
+  background: linear-gradient(357deg, #9356DC, #FF79DA);
+  -webkit-background-clip: text;
+          background-clip: text;
+  transform-origin: bottom;
+  -webkit-text-stroke: 1px;
+}
+
 /**** Header ****/
 .header {
   padding: 2%;
@@ -51,6 +112,87 @@ a {
 @media all and (min-width: 1024px) {
   .header__goback {
     font-size: 32px;
+  }
+}
+
+/**** Body ****/
+.body {
+  width: 100%;
+  margin: auto;
+}
+
+/**** Footer ****/
+.footer {
+  width: 100%;
+  padding: 22px 25px;
+  background-color: #404040;
+  color: #ffffff;
+}
+@media all and (min-width: 768px) {
+  .footer {
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+    justify-content: flex-start;
+    height: 114px;
+    gap: 16px;
+  }
+}
+.footer p {
+  margin: 5px 0;
+}
+.footer__logo {
+  margin: 0 0 16px 0;
+  font-size: 27px;
+  font-family: "Shrikhand", cursive;
+  font-size: 18px;
+}
+@media all and (min-width: 1024px) {
+  .footer__logo {
+    width: 137px;
+    margin: 0;
+  }
+}
+@media all and (min-width: 768px) {
+  .footer__logo {
+    width: 137px;
+    margin: 0;
+  }
+}
+.footer__bloc {
+  display: flex;
+  flex-direction: column;
+}
+@media all and (min-width: 768px) {
+  .footer__bloc {
+    flex-direction: row;
+    align-items: center;
+    gap: 7px;
+  }
+}
+.footer__nav {
+  display: flex;
+  align-items: center;
+  font-weight: 500;
+  gap: 7px;
+}
+@media all and (min-width: 768px) {
+  .footer__nav {
+    width: 190px;
+  }
+}
+.footer__nav--icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 16px;
+  height: 13px;
+  font-size: 13px;
+}
+@media all and (min-width: 768px) {
+  .footer__nav--info p {
+    width: 130px;
+    height: 20px;
   }
 }
 
