--- a/Sass/Base/Police.scss
+++ b/Sass/Base/Police.scss
@@ -20,6 +20,7 @@ $font-weight: (
 
 /// Titre
 
+/**** logo ****/
 @mixin cursive__logo {
     font-size: 27px;
     font-family: "Shrikhand",cursive;
